Gestion des produits avec insertion des images