@@ -1,6 +1,5 @@
 package com.team.mekit.service.product;
 
-import com.team.mekit.dto.ImageDto;
 import com.team.mekit.dto.ProductDto;
 import com.team.mekit.entities.Category;
 import com.team.mekit.entities.Image;
@@ -16,9 +15,16 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
@@ -28,9 +34,11 @@ public class ProductService implements IProductService {
     private final ImageRepository imageRepository;
     private final ModelMapper modelMapper;
 
+    public static String IMAGE_UPLOAD_DIR = System.getProperty("user.dir") + "/src/main/resources/static/images";
+
 
     @Override
-    public Product addProduct(AddProductRequest request) throws AlreadyExistsException {
+    public Product addProduct(AddProductRequest request, List<MultipartFile> file) throws AlreadyExistsException, IOException {
         if (productExists(request.getName(), request.getBrand())) {
             throw new AlreadyExistsException(request.getBrand() + " "
                     + request.getName() + " already exists, you may update this product instead!");
@@ -39,29 +47,69 @@ public class ProductService implements IProductService {
                 .orElseGet(() -> {
                     throw new ResourceNotFoundException("Category not found ");
                 });
-        return productRepository.save(createProduct(request, category));
 
+        Product product = new Product();
+        product.setName(request.getName());
+        product.setDescription(request.getDescription());
+        product.setPrice(request.getPrice());
+        product.setBrand(request.getBrand());
+        product.setCategory(category);
+
+        List<Image> images = new ArrayList<>();
+
+        List<String> imagePaths = saveImages(file);
+
+        for (String imagePath : imagePaths) {
+            Image image = new Image();
+            image.setUrl(imagePath);// Définit l'URL de l'image
+            image.setProduct(product); // Associe l'image au produit
+            images.add(image);
+        }
+
+        product.setImages(images);
+
+        return productRepository.save(product);
     }
 
     private boolean productExists(String name, String brand) {
         return productRepository.existsByNameAndBrand(name, brand);
     }
 
-    private Product createProduct(AddProductRequest request, Category category) {
-        return new Product(
-                request.getName(),
-                request.getBrand(),
-                request.getPrice(),
-                request.getDescription(),
-                category
-        );
+    private List<String> saveImages(List<MultipartFile> files) throws IOException {
+        List<String> imagePaths = new ArrayList<>();
+
+        for (MultipartFile file : files) {
+            String fileName = file.getOriginalFilename();
+            Path path = Paths.get(IMAGE_UPLOAD_DIR, fileName);
+
+            // Créer le répertoire si nécessaire
+            Files.createDirectories(path.getParent());
+
+            // Transférer le fichier vers le chemin spécifié
+            file.transferTo(path);
+
+            // Ajouter le chemin d'accès de l'image à la liste
+            imagePaths.add(path.toString());
+        }
+
+        return imagePaths; // Retourner la liste des chemins d'accès des images sauvegardées
     }
 
+
     @Override
-    public Product getProductById(Long id) {
-        return productRepository.findById(id)
+    public ProductDto getProductById(Long id) {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found!"));
+
+        // Créer une liste d'URL pour les images
+        List<String> imageUrls = product.getImages().stream()
+                .map(Image::getUrl)
+                .collect(Collectors.toList());
+
+        // Retourner le DTO avec les informations du produit et les images
+        return new ProductDto(product.getId(), product.getName(), product.getBrand(), product.getPrice() ,product.getDescription(), product.getCategory(), imageUrls);
     }
+
 
     @Override
     public void deleteProductById(Long id) {
@@ -78,43 +126,89 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public Product updateProduct(ProductUpdateRequest request, Long productId) {
-        return productRepository.findById(productId)
-                .map(existingProduct -> updateExistingProduct(existingProduct, request))
-                .map(productRepository::save)
+    public ProductDto updateProduct(Long id, ProductUpdateRequest updatedProductDto, List<MultipartFile> newImages) throws IOException {
+        Product existingProduct = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found!"));
+        Category category = Optional.ofNullable(categoryRepository.findByName(updatedProductDto.getCategory()))
+                .orElseGet(() -> {
+                    throw new ResourceNotFoundException("Category not found ");
+                });
+        // Mettre à jour les détails du produit
+        existingProduct.setName(updatedProductDto.getName());
+        existingProduct.setDescription(updatedProductDto.getDescription());
+        existingProduct.setPrice(updatedProductDto.getPrice());
+        existingProduct.setBrand(updatedProductDto.getBrand());
+        existingProduct.setCategory(category);
+
+        // Gérer la mise à jour des images
+
+        // Supprimer les anciennes images si nécessaire
+        List<Image> existingImages = existingProduct.getImages();
+        existingImages.clear();
+
+        // Si des nouvelles images sont fournies, les traiter
+        if (newImages != null && !newImages.isEmpty()) {
+            List<String> imagePaths = saveImages(newImages);
+
+            for (String imagePath : imagePaths) {
+                Image image = new Image();
+                image.setUrl(imagePath);// Définit l'URL de l'image
+                image.setProduct(existingProduct); // Associe l'image au produit
+                existingImages.add(image);
+            }
+        }
+
+        // Mettre à jour la liste des images du produit
+        existingProduct.setImages(existingImages);
+
+        // Sauvegarder le produit mis à jour
+        productRepository.save(existingProduct);
+
+        // Convertir le produit mis à jour en DTO et le retourner
+        return convertToDto(existingProduct);
     }
+
 
     @Override
     public List<Product> getAllProducts() {
         return productRepository.findAll();
     }
 
-     private Product updateExistingProduct(Product existingProduct, ProductUpdateRequest request) {
-        existingProduct.setName(request.getName());
-        existingProduct.setBrand(request.getBrand());
-        existingProduct.setPrice(request.getPrice());
-        existingProduct.setDescription(request.getDescription());
-
-        Category category = categoryRepository.findByName(request.getCategory().getName());
-        existingProduct.setCategory(category);
-        return existingProduct;
-
-    }
-
     @Override
-    public List<ProductDto> getConvertedProducts(List<Product> products) {
-        return products.stream().map(this::convertToDto).toList();
+    public List<ProductDto> getAllProductsDto() {
+        List<Product> products = productRepository.findAll();
+        List<ProductDto> productDtos = new ArrayList<>();
+
+        for (Product product : products) {
+            List<String> imageUrls = new ArrayList<>();
+            for (Image image : product.getImages()) {
+                imageUrls.add(image.getUrl());
+            }
+            productDtos.add(new ProductDto(product.getId(), product.getName(), product.getBrand(), product.getPrice() , product.getDescription(), product.getCategory(), imageUrls));
+        }
+        return productDtos;
     }
 
-    @Override
-    public ProductDto convertToDto(Product product) {
-        ProductDto productDto = modelMapper.map(product, ProductDto.class);
-        List<Image> images = imageRepository.findByProductId(product.getId());
-        List<ImageDto> imageDtos = images.stream()
-                .map(image -> modelMapper.map(image, ImageDto.class))
-                .toList();
-        productDto.setImages(imageDtos);
-        return productDto;
+    public ProductDto convertToDto(Product theProduct) {
+        if (theProduct == null) {
+            return null; // Gestion des cas où le produit est null
+        }
+
+        // Récupérer les URLs des images
+        List<String> imageUrls = theProduct.getImages().stream()
+                .map(Image::getUrl)
+                .collect(Collectors.toList());
+
+        // Créer et retourner le ProductDto
+        return new ProductDto(
+                theProduct.getId(),
+                theProduct.getName(),
+                theProduct.getBrand(),
+                theProduct.getPrice(),
+                theProduct.getDescription(),
+                theProduct.getCategory(),
+                imageUrls
+        );
     }
+
 }
